# tnso-mcp-server

./: .env.example  .gitignore  README.md  pyproject.toml
skills/tnso-mcp/: SKILL.md
src/tnso_mcp_server/: __init__.py  __main__.py  server.py
src/tnso_mcp_server/api/: __init__.py  client.py  models.py
src/tnso_mcp_server/cache/: __init__.py  manager.py  memory.py  persistent.py
src/tnso_mcp_server/cli/: __init__.py  get_concepts_cli.py
src/tnso_mcp_server/tools/: __init__.py  check_data_availability.py  discover_dataflows.py  get_cache_diagnostics.py  get_codelist_description.py  get_concepts.py  get_constraints.py  get_data.py  get_structure.py  get_territorial_codes.py  helpers.py  probe.py
src/tnso_mcp_server/utils/: __init__.py  blacklist.py  logging.py  validators.py
tests/: conftest.py  test_blacklist.py  test_cache.py  test_client_parsing.py  test_helpers.py  test_integration_live.py  test_models.py  test_probe.py  test_schema_validation.py  test_tools.py  test_validators.py
thoughts/shared/plans/: 2026-06-25_query-probing-empty-result-recovery.codex_pass1.md  2026-06-25_query-probing-empty-result-recovery.codex_pass2.md  2026-06-25_query-probing-empty-result-recovery.md
thoughts/shared/research/: 2026-06-25_05-58-38_surfer-vs-tnso-architecture-comparison.md
