[project]
name = "tnso-mcp-server"
version = "0.1.0"
description = "MCP server to query Thailand (TNSO – National Statistical Office) official statistics via the SDMX REST API. Ported from ondata/istat_mcp_server."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "mcp>=0.9.0",
    "httpx>=0.27.0",
    "lxml>=5.0.0",
    "cachetools>=5.3.0",
    "diskcache>=5.6.0",
    "tenacity>=8.2.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
tnso-mcp-server = "tnso_mcp_server.__main__:main"
tnso-get-concepts-cli = "tnso_mcp_server.cli.get_concepts_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tnso_mcp_server"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: live tests that hit the real TNSO SDMX API (deselect with -m 'not integration')",
]
